new splash page

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MQ579MW2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H0GKHPL0NZ"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-F5MQ579MW2');
+    gtag('config', 'G-H0GKHPL0NZ');
     </script>
 
     <!-- Bootstrap -->
