--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,3 +1,7 @@
+
+This is a splash page
+
+<!--
 {% extends 'base.html' %}
 
 {% block title %}South Texas's Platform for Streamlined Project Bidding{% endblock %}
@@ -72,4 +76,4 @@
 
 
 
-{% endblock %}
+{% endblock %}-->
