--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,1 +1,72 @@
-Splash page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H0GKHPL0NZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-H0GKHPL0NZ');
+    </script>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+        crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/d2d4a0cc10.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+
+    <!-- Animate on Scroll -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Custom CSS + Fonts -->
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito" rel="stylesheet">
+
+    <!-- Set Favicon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+    <!-- Cookie Consent Plugin -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
+    <title>SE Legacy</title>
+</head>
+<body>
+    
+
+
+
+    <div class="pt-5 pb-5" style="min-height: 900px; position: relative;">
+        <div style="background: url('/static/splash.jpg') no-repeat center center fixed; 
+                    background-size: cover; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 0;"></div>
+        
+        <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 1;
+                    background: black; opacity: 0.2;"></div>
+        
+        <div class="container pb-5" style="position: relative; z-index: 2; padding-top: 75px;">
+            <div class="row mb-5 justify-content-center">   
+                <div class="col-12">
+                    <div class="text-center">
+                        <h1 style="color:white; font-weight: bold; letter-spacing: 2px;" class="pb-4">Welcome to the SE Legacy Bidding & Procurement Portal</h1>
+                        <h4 style="color:white; font-weight: 300; letter-spacing: 1px;">Come back on Wedneday, June 7th to view existing bids</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</body>
+</html>
