Updated STAR to SE Legacy

--- a/project/templates/admin_signup.html
+++ b/project/templates/admin_signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}South Texas Agency for Resources | Signup{% endblock %}
+{% block title %}SE Legacy | Signup{% endblock %}
 
 {% block content %}
 
