--- a/project/templates/application_submitted_email.html
+++ b/project/templates/application_submitted_email.html
@@ -22,8 +22,8 @@
         </ul>
 
     <hr>
-    <p>To review the application documents, please login as Admin: (https://www.stxresources.org/login_admin)</p>
+    <p>To review the application documents, please login as Admin: (https://www.selegacyconnect.org/login_admin)</p>
 
-    <p>Sent from South Texas Agency for Resources (https://www.stxresources.org)</p>
+    <p>Sent from SE Legacy (https://www.selegacyconnect.org)</p>
 </body>
 </html>
