--- a/project/templates/applications_summary_page.html
+++ b/project/templates/applications_summary_page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}My Applications | STAR{% endblock %}
+{% block title %}My Applications | SE Legacy{% endblock %}
 
 {% block content %}
 
