--- a/project/templates/apply_for_bid.html
+++ b/project/templates/apply_for_bid.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Apply for Bid | STAR{% endblock %}
+{% block title %}Apply for Bid | SE Legacy{% endblock %}
 
 {% block content %}
 
