--- a/project/templates/awarded_bids.html
+++ b/project/templates/awarded_bids.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Awarded Bids | STAR{% endblock %}
+{% block title %}Awarded Bids | SE Legacy{% endblock %}
 
 {% block content %}
 
