--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -201,7 +201,7 @@
 
             <div class="row">
                 <p style="color: black;">
-                    &copy; 2023 South Texas Agency for Resources
+                    &copy; 2023 SE Legacy
                 </p>
 
                 <p style="color: black;">
