--- a/project/templates/bid_details.html
+++ b/project/templates/bid_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}STAR Current Bids{% endblock %}
+{% block title %}SE Legacy Current Bids{% endblock %}
 
 {% block content %}
 
