--- a/project/templates/closed_bids.html
+++ b/project/templates/closed_bids.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}STAR Closed Bids{% endblock %}
+{% block title %}SE Legacy Closed Bids{% endblock %}
 
 {% block content %}
 
