--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}South Texas Agency for Resources | Contact{% endblock %}
+{% block title %}SE Legacy | Contact{% endblock %}
 
 {% block head %}
 <script src="https://www.google.com/recaptcha/api.js"></script>
