--- a/project/templates/contact_email.html
+++ b/project/templates/contact_email.html
@@ -26,6 +26,6 @@
 
     <hr>
 
-    <p>Sent from South Texas Agency for Resources (https://www.stxresources.org)</p>
+    <p>Sent from SE Legacy (https://www.selegacyconnect.org)</p>
 </body>
 </html>
