--- a/project/templates/current_bids.html
+++ b/project/templates/current_bids.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Current Bids | STAR {% endblock %}
+{% block title %}Current Bids | SE Legacy {% endblock %}
 
 {% block content %}
 
@@ -32,7 +32,7 @@
                     <p>
                         <b>
                             Your business must be 
-                            <a class="hover-link-blue" href="{{ url_for('views.registration_personal') }}">registered</a> with STAR to apply for a bid.
+                            <a class="hover-link-blue" href="{{ url_for('views.registration_personal') }}">registered</a> with SE Legacy to apply for a bid.
                         </b>
                     </p>
                 </div>
