--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -34,7 +34,7 @@
         <div class="row mb-5 justify-content-center">   
             <div class="col-12">
                 <div class="text-center">
-                    <h1 style="color:white; font-weight: bold; letter-spacing: 2px;" class="pb-4">Welcome to the STAR Procurement Portal to Bidding and Contracting Opportunities in South Texas</h1>
+                    <h1 style="color:white; font-weight: bold; letter-spacing: 2px;" class="pb-4">Welcome to the SE Legacy Bidding & Procurement Portal</h1>
                     <h4 style="color:white; font-weight: 300; letter-spacing: 1px;">To Access the Portal, Vendors must register and create an account prior to responding to open solicitations</h4>
                 </div>
             </div>
