--- a/project/templates/login_admin.html
+++ b/project/templates/login_admin.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}South Texas Agency for Resources | Admin Login{% endblock %}
+{% block title %}SE Legacy | Admin Login{% endblock %}
 
 {% block head %}
 <style>
