--- a/project/templates/login_vendor.html
+++ b/project/templates/login_vendor.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}South Texas Agency for Resources | Supplier Login{% endblock %}
+{% block title %}SE Legacy | Supplier Login{% endblock %}
 
 {% block head %}
 <style>
