--- a/project/templates/manage_project.html
+++ b/project/templates/manage_project.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Manage Projects | STAR{% endblock %}
+{% block title %}Manage Projects | SE Legacy{% endblock %}
 
 {% block content %}
 
