--- a/project/templates/registration_location.html
+++ b/project/templates/registration_location.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Vendor Registration | South Texas Agency for Resources{% endblock %}
+{% block title %}Vendor Registration | SE Legacy{% endblock %}
 
 
 
