--- a/project/templates/reset_password.html
+++ b/project/templates/reset_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Choose New Password | STAR{% endblock %}
+{% block title %}Choose New Password | SE Legacy{% endblock %}
 
 {% block content %}
 
