--- a/project/templates/supplier_settings.html
+++ b/project/templates/supplier_settings.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Vendor Settings | STAR{% endblock %}
+{% block title %}Vendor Settings | SE Legacy{% endblock %}
 
 {% block content %}
 
