--- a/project/templates/update_supplier_settings.html
+++ b/project/templates/update_supplier_settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Update Vendor Settings | STAR{% endblock %}
+{% block title %}Update Vendor Settings | SE Legacy{% endblock %}
 
 {% block head %}
 <style>
