--- a/project/templates/view_application.html
+++ b/project/templates/view_application.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}View Application Details | STAR{% endblock %}
+{% block title %}View Application Details | SE Legacy{% endblock %}
 
 
 {% block content %}
