--- a/project/templates/view_bid_details.html
+++ b/project/templates/view_bid_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}View Bid Details | STAR{% endblock %}
+{% block title %}View Bid Details | SE Legacy{% endblock %}
 
 {% block head %}
 <style>
