--- a/project/templates/new_application_email.html
+++ b/project/templates/new_application_email.html
@@ -30,9 +30,9 @@
 
     <hr>
 
-    <p>Follow this link to view more details about this applicaiton: https://www.stxresources.org/view_bid_details/{{ bid_object.id }}</p>
+    <p>Follow this link to view more details about this applicaiton: https://www.selegacyconnect.org/view_bid_details/{{ bid_object.id }}</p>
 
-    <p>Sent from South Texas Agency for Resources (https://www.stxresources.org)</p>
+    <p>Sent from SE Legacy (https://www.selegacyconnect.org)</p>
     
 </body>
 </html>
