--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -59,7 +59,7 @@
                 <!--Logo to the left-->
                 <a class="navbar-brand" href="{{ url_for('views.index') }}">
                     <img src="/static/logo.png" 
-                        width="240" height="120" class="d-inline-block align-top" alt="Unified Science Labs logo with an image of an Erlenmeyer flask made of bubbles">
+                        width="120" height="120" class="d-inline-block align-top" alt="Unified Science Labs logo with an image of an Erlenmeyer flask made of bubbles">
                 </a>
 
                 <button class="navbar-toggler" 
@@ -165,10 +165,9 @@
 
             <div class="row pb-5 pt-3 footer-row">
                 <div class="col-6">
-                    <a href="{{ url_for('views.index') }}"><img src="/static/logo.png" width="240" height="120" class="img-fluid rounded"></a>
+                    <a href="{{ url_for('views.index') }}"><img src="/static/logo.png" width="120" height="120" class="img-fluid rounded"></a>
                     <p class="mt-3" style="color: black; font-size: small;">
-                        The Premier Resource for Government Contractors
-                        - The Ultimate Platform for Collaborative Innovation.
+                        The Ultimate Platform for Collaborative Innovation
                     </p>
                 </div>
 
@@ -201,7 +200,7 @@
 
             <div class="row">
                 <p style="color: black;">
-                    &copy; 2023 SE Legacy
+                    &copy; 2023 SE Legacy Development, LLC
                 </p>
 
                 <p style="color: black;">
