Updated code to incorporate recent changes in STAR
The STAR changes are from June 1 2023 through June 5 2023. Check the STAR commits for more details.

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -293,16 +293,19 @@
   
 
   .table-header-primary {
-    background-color: #ffcba4;
+    background-color: var(--primary-color);
+    color: var(--white);
   }
   
   .table thead th {
-    background-color: #ffcba4;
+    background-color: var(--primary-color);
+    color: var(--white);
   }
   
   
   th {
-    background-color: #ffcba4;
+    background-color: var(--primary-color);
+    color: var(--white);
   }
   
   td {
