--- a/project/templates/manage_project.html
+++ b/project/templates/manage_project.html
@@ -74,7 +74,7 @@
 
             <div class="row">
                 <div class="col-6 col-md-3 mb-4">
-                    <label for="close_time" class="form-label">Close time:</label>
+                    <label for="close_time" class="form-label">Close time (Central):</label>
                     <input type="time" id="close_time" name="close_time" class="form-control">
                 </div>
             </div>
