--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -174,6 +174,7 @@
                 <div class="col-6">
                     <h5 class="pb-2" style="color: black;">Quick Links</h5>
 
+                    {% if not user.is_authenticated %}
                     <p class="footer-links">                            
                         <a href="{{ url_for('views.login_vendor') }}" class="nav-link">Vendor Login</a>
                     </p>
@@ -181,10 +182,36 @@
                     <p class="footer-links">
                         <a class="nav-link" href="{{ url_for('views.registration_personal') }}">Create an Account</a>
                     </p>
+                    {% endif %}
+
+                    {% if user.is_authenticated and session['user_type'] == 'admin' %}
+                    <p class="footer-links">
+                        <a class="nav-link" href="{{ url_for('views.manage_project') }}">Manage Projects</a>
+                    </p>
+                    {% endif %}
+
+                    {% if user.is_authenticated and session['user_type'] == 'supplier' %}
+                    <p class="footer-links">
+                        <a class="nav-link" href="{{ url_for('views.applications_summary_page') }}">My Applications</a>
+                    </p>
+
+                    <p class="footer-links">
+                        <a class="nav-link" href="{{ url_for('views.supplier_settings') }}">Edit Profile</a>
+                    </p>
+                    {% endif %}
+
 
                     <p class="footer-links">
                         <a class="nav-link" href="{{ url_for('views.contact') }}">Contact</a>
                     </p>
+
+
+                    {% if user.is_authenticated %}
+                    <p class="footer-links">                            
+                        <a href="{{ url_for('views.logout') }}" class="nav-link">Logout</a>
+                    </p>
+                    {% endif %}
+
 
                     <!--
                     <p class="footer-links">                            
