--- a/project/templates/manage_project.html
+++ b/project/templates/manage_project.html
@@ -31,7 +31,7 @@
 
 
 <div class="py-5">
-    <div class="container">
+    <div class="container border p-4 rounded col-md-12 col-lg-8">
         <h3 class="mb-5">Create a New Project</h3>
         <form action="{{ url_for('views.manage_project') }}" method="POST" enctype="multipart/form-data">
 
