added RFB option, and encrypted ssns

--- a/project/templates/manage_project.html
+++ b/project/templates/manage_project.html
@@ -46,6 +46,7 @@
                     style="width:auto" id="bid_type">
 
                     <option selected disabled="disabled">Choose a bid type</option>
+                    <option value="RFB">Request for Bid (RFB)</option>
                     <option value="RFP">Request for Proposal (RFP)</option>
                     <option value="RFQ">Request for Quote (RFQ)</option>
                     <option value="RFI">Request for Information (RFI)</option>
