--- a/project/templates/view_bid_details.html
+++ b/project/templates/view_bid_details.html
@@ -216,7 +216,7 @@
                     {% else %}
 
                         <button type="button" 
-                                class="btn btn-primary"
+                                class="btn btn-primary mb-3"
                                 style="width:auto"
                                 onclick="toggleChatHistory()"
                                 id="chat_button">
