--- a/project/templates/new_app_email_to_vendor.html
+++ b/project/templates/new_app_email_to_vendor.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form Submission</title>
+    <title>New Application Submitted</title>
 </head>
 
 <body>
-    <h1>You have received a new application!</h1>
+    <h1>Your application has been successfully submitted!</h1>
 
     <hr>
 
@@ -30,9 +30,9 @@
 
     <hr>
 
-    <p>Follow this link to view more details about this applicaiton: https://www.selegacyconnect.org/view-bid-details/{{ bid_object.id }}</p>
+    <p>Follow this link to view your application: https://www.selegacyconnect.org/view-bid-details/{{ bid_object.id }}</p>
 
-    <p>Sent from SE Legacy (https://www.selegacyconnect.org)</p>
-    
+    <p>Sent from South Texas Agency for Resources (https://www.stxresources.org)</p>
+
 </body>
 </html>
