Update - added feature for admin to download vendor list as csv

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -106,6 +106,13 @@
                                     Manage Projects
                                 </a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" 
+                                    href="{{ url_for('views.admin_data_view') }}">
+                                    View Data
+                                </a>
+                            </li>
                         {% endif %}
 
                         {% if user.is_authenticated and session['user_type'] == 'supplier' %}
