Update homepage replace bid with opportunities

--- a/project/templates/awarded_bids.html
+++ b/project/templates/awarded_bids.html
@@ -28,8 +28,8 @@
         <div class="row mb-3">   
             <div class="col-12 mx-auto">
                 <div class="text-center">
-                    <h1>Awarded Bids</h1>
-                    <p>A summary of the awarded bids and projects.</p>
+                    <h1>Awarded Opportunities</h1>
+                    <p>A summary of the awarded opportunities and projects.</p>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
 
         {% if awarded_bids|length == 0 %}
 
-        <p class="text-center">There are no bids to display.</p>
+        <p class="text-center">There are no opportunities to display.</p>
 
         {% else %}
 
