--- a/project/templates/closed_bids.html
+++ b/project/templates/closed_bids.html
@@ -28,7 +28,7 @@
         <div class="row mb-3">   
             <div class="col-12 mx-auto">
                 <div class="text-center">
-                    <h1>Closed Bids</h1>
+                    <h1>Closed Opportunities</h1>
                     <p>A summary of the closed projects that are no longer accepting applications.</p>
                 </div>
             </div>
@@ -42,7 +42,7 @@
 
         {% if closed_bids|length == 0 %}
 
-        <p class="text-center">There are no bids to display.</p>
+        <p class="text-center">There are no opportunities to display.</p>
 
         {% else %}
 
