--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -46,7 +46,7 @@
             <div class="col-12 col-sm-4 mb-4 mb-sm-0 align-items-center justify-content-center d-flex">
                 <div class="text-center">
                     <a href="{{ url_for('views.current_bids') }}">
-                        <button type="button" class="btn btn-reversed" data-aos="fade-right" data-aos-delay="100">Current bids</button>
+                        <button type="button" class="btn btn-reversed" data-aos="fade-right" data-aos-delay="100">Current Opportunities</button>
                     </a>                  
                 </div>
             </div>
@@ -54,7 +54,7 @@
             <div class="col-12 col-sm-4 mb-4 mb-sm-0 align-items-center justify-content-center d-flex">
                 <div class="text-center">
                     <a href="{{ url_for('views.closed_bids') }}">
-                        <button type="button" class="btn btn-reversed" data-aos="fade-right" data-aos-delay="250">Closed bids</button>
+                        <button type="button" class="btn btn-reversed" data-aos="fade-right" data-aos-delay="250">Closed Opportunities</button>
                     </a> 
                 </div>
             </div>
@@ -62,7 +62,7 @@
             <div class="col-12 col-sm-4 mb-4 mb-sm-0 align-items-center justify-content-center d-flex">
                 <div class="text-center">
                     <a href="{{ url_for('views.awarded_bids') }}">
-                        <button type="button" class="btn btn-reversed" data-aos="fade-right" data-aos-delay="400">Awarded bids</button>
+                        <button type="button" class="btn btn-reversed" data-aos="fade-right" data-aos-delay="400">Awarded Opportunities</button>
                     </a>                 
                 </div>
             </div>
