Add new timeouts. Add logging statements.

--- a/project/templates/manage_project.html
+++ b/project/templates/manage_project.html
@@ -23,6 +23,7 @@
 {% endif %}
 {% endwith %}
 
+
 <div class="pt-5">
     <div class="container">
         <h1 class="text-center">Manage Projects</h1>
@@ -96,6 +97,9 @@
                 Submit project
             </button>
 
+            <p class="mt-3" style="font-size: 12px;">Please be patient. Large files may take several minutes to upload.</p>
+            <p style="font-size: 12px;">For reference, a 1GB file can take 75 seconds to upload.</p>
+
         </form>
     </div>
 </div>
@@ -153,7 +157,6 @@
 
     </div>
 </div>
-
 
 
 
