--- a/project/templates/view_bid_details.html
+++ b/project/templates/view_bid_details.html
@@ -167,6 +167,9 @@
                                     style="width:auto">
                                     Attach files
                                 </button>
+
+                                <p class="mt-3" style="font-size: 12px;">Please be patient. Large files may take several minutes to upload.</p>
+                                <p style="font-size: 12px;">For reference, a 1GB file can take 60 seconds to upload.</p>
                             </form>
                         </div>
                     </div>
@@ -484,6 +487,9 @@
                             Apply
                         </button>
 
+                        <p class="mt-3" style="font-size: 12px;">Please be patient. Large files may take several minutes to upload.</p>
+                        <p style="font-size: 12px;">For reference, a 1GB file can take 60 seconds to upload.</p>
+
                     </form>
                 </div>
             </div>
@@ -507,6 +513,9 @@
             style="width:auto">
             Attach
         </button>
+
+        <p class="mt-3" style="font-size: 12px;">Please be patient. Large files may take several minutes to upload.</p>
+        <p style="font-size: 12px;">For reference, a 1GB file can take 60 seconds to upload.</p>
 
     </form>
 
