Add RFCSP to bid type options

--- a/project/templates/manage_project.html
+++ b/project/templates/manage_project.html
@@ -51,6 +51,7 @@
                     <option value="RFP">Request for Proposal (RFP)</option>
                     <option value="RFQ">Request for Quote (RFQ)</option>
                     <option value="RFI">Request for Information (RFI)</option>
+                    <option value="RFCSP">Request for Competitive Sealed Proposal (RFCSP)</option>
                 </select>
             </div>
 
