--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -233,8 +233,8 @@
 
 
             <div class="row">
-                <p style="color: black;">
-                    &copy; 2023 SE Legacy Development, LLC
+                <p style="color: black;" id="copyright">
+                    &copy; <span id="year"></span> SE Legacy Development, LLC
                 </p>
 
                 <p style="color: black;">
@@ -268,7 +268,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     
-
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 
 
     <!-- NavBar Dropdown Menu Javascript -->
